Phaclon框架搭建-单元测试

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "katzgrau/klogger": "dev-master"
+        "katzgrau/klogger": "dev-master",
+        "phpunit/phpunit": "^6.3",
+        "phalcon/incubator": "^3.1"
     }
 }
