--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "katzgrau/klogger": "dev-master",
         "phpunit/phpunit": "^6.3",
-        "phalcon/incubator": "^3.1"
+        "phalcon/incubator": "^3.1",
+        "jaeger/querylist": "^4.0"
     }
 }
